[package]
name = "nucleus"
version = "0.1.1"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"
description = "Datapack Template generator"
repository = "https://github.com/oOBoomberOo/Nucleus"
license = "MIT"
keywords = ["minecraft", "datapack", "template"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"
name = "nucleus"

[[bin]]
path = "src/main.rs"
name = "nucleus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.6.2"
structopt = "0.3.14"
anyhow = "1.0.28"
regex = "1.3.7"
lazy_static = "1.4.0"
thiserror = "1.0.16"